Kitchensink crashed with EAV, Problematic frame: V [jvm.dll+0x152fe] vframeStreamCommon::fill_from_frame+0x8e

XMLWordPrintable

    • b55
    • b63
    • x86
    • windows
    • Not verified

        test: bigapps/Kitchensink/stability
        time: 234h
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # EXCEPTION_ACCESS_VIOLATION (0xc0000005) at pc=0x00000000725452fe, pid=636, tid=3488
        #
        # JRE version: Java(TM) SE Runtime Environment (8.0-b113) (build 1.8.0-ea-b113)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (25.0-b55 mixed mode windows-amd64 compressed oops)
        # Problematic frame:
        # V [jvm.dll+0x152fe] vframeStreamCommon::fill_from_frame+0x8e
        #
        # Core dump written. Default location: C:\local\aurora\sandbox\results\kitchensink\hs_err_pid636.mdmp
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.sun.com/bugreport/crash.jsp
        #

        --------------- T H R E A D ---------------

        Current thread (0x000000001fb24800): JavaThread "LpHelloStressModule" [_thread_in_vm, id=3488, stack(0x0000000022080000,0x0000000022180000)]

        siginfo: ExceptionCode=0xc0000005, reading address 0x0000000000000020
        ....
        Stack: [0x0000000022080000,0x0000000022180000], sp=0x000000002217dc10, free space=1015k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [jvm.dll+0x152fe] vframeStreamCommon::fill_from_frame+0x8e
        V [jvm.dll+0x158d6] vframeStream::vframeStream+0x186
        V [jvm.dll+0x20b04a] SharedRuntime::resolve_sub_helper+0x1ca
        V [jvm.dll+0x20bbf6] SharedRuntime::resolve_helper+0x46
        V [jvm.dll+0x20c517] SharedRuntime::resolve_virtual_call_C+0x37
        C 0x00000000028c9f5e

        Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
        v ~RuntimeStub::resolve_virtual_call
        J 0x000000000562833c
        J 7355430 C2 java.lang.Thread.processQueue(Ljava/lang/ref/ReferenceQueue;Ljava/util/concurrent/ConcurrentMap;)V (21 bytes) @ 0x0000000006836d18 [0x00000000068369c0+0x358]
        J 4430828 C2 java.lang.Thread.isCCLOverridden(Ljava/lang/Class;)Z (70 bytes) @ 0x0000000002acc720 [0x0000000002acc6e0+0x40]
        J 28134 C2 java.lang.Thread.init(Ljava/lang/ThreadGroup;Ljava/lang/Runnable;Ljava/lang/String;JLjava/security/AccessControlContext;)V (212 bytes) @ 0x0000000005860364 [0x0000000005860260+0x104]
        J 28478 C2 jrockit.qa.stress.kitchensink.process.stress.modules.LpHelloStressModule$LpHelloThread.<init>(Ljrockit/qa/stress/kitchensink/process/stress/modules/LpHelloStressModule;IILjrockit/qa/stress/kitchensink/process/stress/modules/LpHelloStressModule;)V (54 bytes) @ 0x00000000055d5d24 [0x00000000055d5700+0x624]
        J 50478 C2 jrockit.qa.stress.kitchensink.process.stress.modules.LpHelloStressModule.lphelloIteration(J)V (262 bytes) @ 0x0000000002a8cf48 [0x0000000002a8cc20+0x328]
        J 3040128 C2 jrockit.qa.stress.kitchensink.process.stress.modules.LpHelloStressModule.execute()V (105 bytes) @ 0x000000000593a718 [0x000000000593a680+0x98]
        j jrockit.qa.stress.kitchensink.process.stress.modules.StressModule.run()V+128
        v ~StubRoutines::call_stub

              Assignee:
              Vladimir Kozlov
              Reporter:
              Anton Ivanov (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: