8028107: Kitchensink crashed with EAV

Check the state of caller and callee nmethods and skip call site patching if any of them is not alive

Reviewed-by: jrose, twisti